crates/planarc/src/lowering/snapshots/planarc__lowering__extern_funcs__tests__extern_complex_module_name.snap
---
source: crates/planarc/src/lowering/extern_funcs.rs
expression: ast
---
ExternDefinition {
    attributes: [],
    functions: [
        ExternFunction {
            name: "process" @ Span { start: 60, end: 67, line: 3, col: 15, line_end: 2, col_end: 21 },
            args: [
                ExternArgument {
                    name: "data" @ Span { start: 68, end: 72, line: 3, col: 23, line_end: 2, col_end: 26 },
                    ty: "Blob" @ Span { start: 74, end: 78, line: 3, col: 29, line_end: 2, col_end: 32 },
                } @ Span { start: 68, end: 78, line: 3, col: 23, line_end: 2, col_end: 32 },
            ],
            return_type: None,
        } @ Span { start: 60, end: 87, line: 3, col: 15, line_end: 3, col_end: 0 },
    ],
} @ Span { start: 13, end: 100, line: 2, col: 13, line_end: 3, col_end: 13 }
