crates/planarc/src/lowering/snapshots/planarc__lowering__extern_funcs__tests__extern_operator_overload.snap
---
source: crates/planarc/src/lowering/extern_funcs.rs
expression: ast
---
ExternDefinition {
    attributes: [],
    functions: [
        ExternFunction {
            name: "/" @ Span { start: 54, end: 55, line: 3, col: 24, line_end: 2, col_end: 24 },
            args: [
                ExternArgument {
                    name: "left" @ Span { start: 56, end: 60, line: 3, col: 26, line_end: 2, col_end: 29 },
                    ty: "builtin.str" @ Span { start: 62, end: 73, line: 3, col: 32, line_end: 2, col_end: 42 },
                } @ Span { start: 56, end: 73, line: 3, col: 26, line_end: 2, col_end: 42 },
                ExternArgument {
                    name: "right" @ Span { start: 75, end: 80, line: 3, col: 45, line_end: 2, col_end: 49 },
                    ty: "builtin.str" @ Span { start: 82, end: 93, line: 3, col: 52, line_end: 2, col_end: 62 },
                } @ Span { start: 75, end: 93, line: 3, col: 45, line_end: 2, col_end: 62 },
            ],
            return_type: None,
        } @ Span { start: 45, end: 109, line: 3, col: 15, line_end: 3, col_end: 0 },
        ExternFunction {
            name: "+" @ Span { start: 132, end: 133, line: 4, col: 24, line_end: 3, col_end: 24 },
            args: [
                ExternArgument {
                    name: "a" @ Span { start: 134, end: 135, line: 4, col: 26, line_end: 3, col_end: 26 },
                    ty: "Int" @ Span { start: 137, end: 140, line: 4, col: 29, line_end: 3, col_end: 31 },
                } @ Span { start: 134, end: 140, line: 4, col: 26, line_end: 3, col_end: 31 },
                ExternArgument {
                    name: "b" @ Span { start: 142, end: 143, line: 4, col: 34, line_end: 3, col_end: 34 },
                    ty: "Int" @ Span { start: 145, end: 148, line: 4, col: 37, line_end: 3, col_end: 39 },
                } @ Span { start: 142, end: 148, line: 4, col: 34, line_end: 3, col_end: 39 },
            ],
            return_type: None,
        } @ Span { start: 123, end: 156, line: 4, col: 15, line_end: 4, col_end: 0 },
    ],
} @ Span { start: 13, end: 169, line: 2, col: 13, line_end: 4, col_end: 13 }
