crates/planarc/src/lowering/snapshots/planarc__lowering__extern_funcs__tests__extern_with_multiple_fns.snap
---
source: crates/planarc/src/lowering/extern_funcs.rs
expression: ast
---
ExternDefinition {
    attributes: [],
    functions: [
        ExternFunction {
            name: "validate" @ Span { start: 47, end: 55, line: 3, col: 15, line_end: 2, col_end: 22 },
            args: [
                ExternArgument {
                    name: "input" @ Span { start: 56, end: 61, line: 3, col: 24, line_end: 2, col_end: 28 },
                    ty: "String" @ Span { start: 63, end: 69, line: 3, col: 31, line_end: 2, col_end: 36 },
                } @ Span { start: 56, end: 69, line: 3, col: 24, line_end: 2, col_end: 36 },
                ExternArgument {
                    name: "mode" @ Span { start: 71, end: 75, line: 3, col: 39, line_end: 2, col_end: 42 },
                    ty: "Int" @ Span { start: 77, end: 80, line: 3, col: 45, line_end: 2, col_end: 47 },
                } @ Span { start: 71, end: 80, line: 3, col: 39, line_end: 2, col_end: 47 },
            ],
            return_type: None,
        } @ Span { start: 47, end: 91, line: 3, col: 15, line_end: 3, col_end: 0 },
    ],
} @ Span { start: 13, end: 134, line: 2, col: 13, line_end: 4, col_end: 13 }
