crates/planarc/src/lowering/snapshots/planarc__lowering__extern_funcs__tests__simple_extern_module.snap
---
source: crates/planarc/src/lowering/extern_funcs.rs
expression: ast
---
ExternDefinition {
    attributes: [],
    functions: [
        ExternFunction {
            name: "isPascalCase" @ Span { start: 45, end: 57, line: 3, col: 15, line_end: 2, col_end: 26 },
            args: [
                ExternArgument {
                    name: "name" @ Span { start: 58, end: 62, line: 3, col: 28, line_end: 2, col_end: 31 },
                    ty: "String" @ Span { start: 64, end: 70, line: 3, col: 34, line_end: 2, col_end: 39 },
                } @ Span { start: 58, end: 70, line: 3, col: 28, line_end: 2, col_end: 39 },
            ],
            return_type: None,
        } @ Span { start: 45, end: 86, line: 3, col: 15, line_end: 3, col_end: 0 },
    ],
} @ Span { start: 13, end: 99, line: 2, col: 13, line_end: 3, col_end: 13 }
